@@ -435,15 +435,16 @@ sub various_xfree_conf {
 	    output_with_perm($f, 0755, "xset m 1/8 1\n");
 	}
     }
-    
-    my @pkgs = (
-	if_($mouse->{synaptics}, 'x11-driver-input-synaptics'),
-	if_($mouse->{evdev_mice}, 'x11-driver-input-evdev'),
-	if_($mouse->{Protocol} eq 'vboxmouse', 'x11-driver-input-vboxmouse'),
-	if_($mouse->{imwheel}, 'imwheel'),
-	if_(@{$mouse->{wacom}}, 'linuxwacom'),
-    );
-    $do_pkgs->install(@pkgs) if @pkgs;
+  
+    my $inputdrvpath = '/usr/lib/xorg/modules/input';
+    my @pkgs = [
+	if_($mouse->{synaptics}, ['x11-driver-input-synaptics', "$inputdrvpath/synaptics_drv.so"]),
+	if_($mouse->{evdev_mice}, ['x11-driver-input-evdev', "$inputdrvpath/evdev_drv.so"]),
+	if_($mouse->{Protocol} eq 'vboxmouse', ['x11-driver-input-vboxmouse', "$inputdrvpath/vboxmouse_drv.so"]),
+	if_($mouse->{imwheel}, ['imwheel', "/usr/bin/imwheel"]),
+	if_(@{$mouse->{wacom}}, ['linuxwacom', "$inputdrvpath/wacom_drv.so"]),
+    ];
+    $do_pkgs->ensure_files_are_installed(@pkgs, 1) if @pkgs;
 
     if ($mouse->{imwheel}) {
 	my $rc = "/etc/X11/imwheel/imwheelrc.$mouse->{imwheel}";
